src/tests/fail/id_handler_too_short.stderr
error[E0597]: `handler` does not live long enough
 --> $DIR/id_handler_too_short.rs:7:23
  |
7 |         conn.id_handler_add(&handler, "id");
  |                             ^^^^^^^^ borrowed value does not live long enough
8 |         conn
  |         ---- a temporary with access to the borrow is created here ...
9 |     };
  |     -- ... and the borrow might be used here, when that temporary is dropped and runs the `Drop` code for type `libstrophe::connection::Connection`
  |     |
  |     `handler` dropped here while still borrowed
  |
  = note: The temporary is part of an expression at the end of a block. Consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped.
